examples/python/failing/mismatched_argument_lists/Left.py
from bookmaker import front_page, compile, table_of_contents

def main():
    compile(toc=table_of_contents())

